--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -12,6 +12,7 @@
 	<button>로그인</button>
 </form>
 <a href="/oauth2/authorization/google">구글 로그인</a> <!-- 이 주소는 마음대로 바꿀 수 있는 주소가 아님 -->
+<a href="/oauth2/authorization/facebook">페이스북 로그인</a>
 <a href="/joinForm">회원가입을 아직 하지 않으셨나요?</a>
 </body>
 </html>
